methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:3: error: illegal start of declaration
  if(avant){
  ^MethodsArgs:12: error: identifier expected but integer literal found.
move(3,true) 
     ^MethodsArgs:14: error: ')' expected but '}' found.
}
^