methods.args.MethodsArgs.scala.code
def move (pas:Int, avant:Boolean{
  if(avant){
    avance(pas);
  }
  else{
    recule(pas);
  }
}
          
         
move(3,true)